# awsm-template-physics-multithreaded

./: .gitignore  .gitmodules  .mcp.json  BOX3D.md  Cargo.toml  README.md  Taskfile.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.zed/: settings.json
media/audio/: project.toml
media/audio/assets/: 763cd8f7-b603-46e0-b6e4-da6fa8a4db4a.wasm  8709d208-b0ab-458d-9d70-1ae65b2dd56e.wasm  a1e54453-522d-4a3a-bd69-fd70a9a2906e.wasm
media/bundle/: scene.toml
media/bundle/assets/: 376bfd49-1b7a-4c8d-9b1e-56c9fd2f7ee7.ktx2  50c69cd7-bf31-46ec-b534-99f2e93907ee.ktx2  6d2fc755-9dd1-419e-a635-310d7e28fd74.ktx2  83d45df8-4ce2-4d2f-84f0-174f12ed5a66.ktx2  8b7f0c8f-ba34-41bd-9be7-f13c470d927f.ktx2  973b391a-c58a-4740-aa7d-dc193730fd1c.ktx2  a126a74e-a73b-4d59-aa87-ed7f0aab157a.ktx2  b6b28a02-ac62-425a-9505-961bbdceab0b.ktx2  e82de494-4577-4576-bc02-785b931f0ad0.ktx2  ff9bec40-49f9-44cf-8a53-d245f955480c.ktx2
media/scene/: project.toml
web/workers/: basis-worker.js
